@@ -141,41 +141,13 @@ configure(chartsWebModule) {
     }
 
     File webOutDir = new File("$buildDir/web")
-
-    // task buildGwt(dependsOn: enhanceTheme) << {
-    task buildGwt(dependsOn: compileJava) << {
-        File widgetsetsDir = new File(webOutDir, "VAADIN/widgetsets")
-
-        if (!widgetsetsDir.exists()) {
-            File webToolkitSrcDir = new File(chartsWebToolkitModule.projectDir, 'src')
-
-            def gwtBuildingArtifacts = configurations.gwtBuilding.resolvedConfiguration.getResolvedArtifacts()
-            File validationSrcJar = gwtBuildingArtifacts.find { it.name == 'validation-api' }.file
-
-            def mainClasspath = sourceSets.main.compileClasspath.findAll {
-                !it.name.contains('jdtcore') && !it.name.contains('popupbutton')
-            }
-
-            javaexec {
-                main = 'com.google.gwt.dev.Compiler'
-                classpath(
-                        validationSrcJar,
-                        webToolkitSrcDir,
-                        chartsWebToolkitModule.sourceSets.main.output.classesDir,
-                        sourceSets.main.output.classesDir,
-                        mainClasspath)
-                args('-war', widgetsetsDir.absolutePath, 
-                     '-style', 'OBF', 
-                     '-localWorkers', '2',
-                     //'-logLevel', 'DEBUG', 
-                     'com.haulmont.charts.toolkit.gwt.ChartsWidgetSet')
-                jvmArgs('-Xmx512m', '-Xss8m', '-XX:MaxPermSize=256m', '-Djava.awt.headless=true'
-                /*'-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000'*/)
-            }
-            ant.delete(dir: new File(widgetsetsDir, 'WEB-INF'))
-        } else {
-            println "Widgetsets dir exists, skip build GWT"
-        }
+    task buildGwt(dependsOn: compileJava, type: CubaWebToolkit) {
+        widgetSetsDir = "$webOutDir/VAADIN/widgetsets"
+        widgetSetModules = [chartsWebToolkitModule]
+        widgetSetClass = 'com.haulmont.charts.toolkit.gwt.ChartsWidgetSet'
+        excludeJars('popupbutton')
+//        jvmArgs('-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000')
+//        compilerArgs = ['-style' : 'PRETTY', '-localWorkers' : '2']
     }
     assemble.dependsOn buildGwt
     
